# halo2-cairo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: cairo_program_with_builtin.in
examples/: cairo_program_with_builtin.rs
resources/cairo/: README.md
resources/cairo/hello/: Scarb.toml  res.json
resources/cairo/hello/src/: lib.cairo
src/: 0100100000000110  cairo.rs  cairo_circuit.rs  lib.rs
tests/: cairo_snippets_test.rs  cairo_test.rs
tests/common/: mod.rs
