[package]
name = "halo2-cairo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
clap = { version = "4.1", features = ["derive"] }
test-case = "3.1.0"
num-bigint = { version = "0.4" }
rand = "0.8"

# Axiom's helper API with basic functions 
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "develop" }
regex = "1.9.5"

[dev-dependencies]
test-log = "0.2.11"
ethers-core = "2.0.6"
num-traits = "0.2.16"

[features]
default = []

# Dev / testing mode. We make opt-level = 3 to improve proving times (otherwise it is really slow)
[profile.dev]
opt-level = 3
debug = 1 # change to 0 or 2 for more or less debug info
overflow-checks = true # default
incremental = true # default

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
panic = "abort"
incremental = false
